feat(attendance): Implement issue detection engine