@@ -16,6 +16,7 @@ import java.time.*;
 import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -25,7 +26,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class AttendanceTransactionServiceImpl implements AttendanceTransactionService {
 
-    // Feign Clients and Repositories
+    // Dependencies
     private final UserClient userClient;
     private final LeaveClient leaveClient;
     private final AttendanceTransactionRepository attendanceTransactionRepository;
@@ -35,73 +36,79 @@ public class AttendanceTransactionServiceImpl implements AttendanceTransactionSe
     private static final LocalTime WORK_END_TIME = LocalTime.parse("17:30");
     private static final LocalTime BREAK_START_TIME = LocalTime.parse("12:30");
     private static final LocalTime BREAK_END_TIME = LocalTime.parse("14:00");
-    private static final int HALF_DAY_THRESHOLD_HOURS = 4;
+    private static final Duration MINIMUM_REQUIRED_WORK_DURATION = Duration.ofMinutes(450); // 7.5 hours
 
-    // System's default ZoneId, defined once for consistency
+    // --- NEW: Configuration for Issue Detection ---
+    private static final Duration LATE_ARRIVAL_THRESHOLD = Duration.ofMinutes(15);
+    private static final Duration EARLY_LEAVE_THRESHOLD = Duration.ofMinutes(30);
+    private static final Duration UNUSUAL_BREAK_THRESHOLD = Duration.ofMinutes(120); // 2 hours
+    private static final int TARDINESS_LOOKBACK_DAYS = 7;
+    private static final int TARDINESS_FREQUENCY_THRESHOLD = 3;
+
     private final ZoneId systemZoneId = ZoneId.systemDefault();
 
     @Override
-    public AttendanceRecordResponseDTO getAttendanceRecordByEmployeeIdAndDate(String employeeId, LocalDate date) {
-        UserResponse userResponse = getUserByEmployeeId(employeeId);
-        // This method is now primarily for fetching single, specific day records.
-        // The logic for gap-filling is handled in getAttendanceRecordsByEmployeeId.
-        return buildRecordForSingleDay(userResponse, date);
-    }
-
-    /**
-     * Retrieves a complete, gap-less list of attendance records for an employee,
-     * starting from their earliest punch date.
-     */
-    @Override
     public List<AttendanceRecordResponseDTO> getAttendanceRecordsByEmployeeId(String employeeId) {
-        // Step 1: Fetch user and all their transactions in one go.
         UserResponse userResponse = getUserByEmployeeId(employeeId);
         if (userResponse == null || userResponse.email() == null) {
-            throw new EmployeeException("Cannot find employee or employee email for ID: " + employeeId);
+            throw new EmployeeException("Cannot find employee for ID: " + employeeId);
         }
         List<AttendanceTransaction> allTransactions = attendanceTransactionRepository.findAllByEmployeeEmail(userResponse.email());
 
         LocalDate endDate = LocalDate.now(systemZoneId);
-
-        // Step 2: Determine the start date from the earliest punch record.
         LocalDate startDate = allTransactions.stream()
                 .map(t -> t.getPunchTime().atZone(systemZoneId).toLocalDate())
-                .min(LocalDate::compareTo)
-                .orElse(endDate); // If no punches ever, just show today's record.
+                .min(Comparator.naturalOrder())
+                .orElse(endDate);
 
-        // Step 3: Group existing transactions by date for quick lookup.
         Map<LocalDate, List<AttendanceTransaction>> transactionsByDate = allTransactions.stream()
                 .collect(Collectors.groupingBy(t -> t.getPunchTime().atZone(systemZoneId).toLocalDate()));
 
-        // PERFORMANCE OPTIMIZATION: Fetch all leave days in the date range at once.
         Set<LocalDate> leaveDays = getLeaveDatesForPeriod(userResponse.id(), startDate, endDate);
 
-        // Step 4: Generate the complete, gap-less record stream from start date to today.
-        return startDate.datesUntil(endDate.plusDays(1))
-                .map(date -> {
-                    DayOfWeek dayOfWeek = date.getDayOfWeek();
-                    // Priority 1: Weekends
-                    if (dayOfWeek == DayOfWeek.SATURDAY || dayOfWeek == DayOfWeek.SUNDAY) {
-                        return createStatusResponse(userResponse, date, EStatus.WEEKEND);
-                    }
-                    // Priority 2: Approved Leave
-                    if (leaveDays.contains(date)) {
-                        return createStatusResponse(userResponse, date, EStatus.ON_LEAVE);
-                    }
-                    // Priority 3: Days with actual punches
-                    if (transactionsByDate.containsKey(date)) {
-                        return buildRecordFromTransactions(userResponse, date, transactionsByDate.get(date));
-                    }
-                    // Priority 4: Today's real-time status (if no punches yet)
-                    if (date.equals(endDate)) {
-                        return createStatusResponse(userResponse, date,
-                                LocalTime.now(systemZoneId).isBefore(WORK_END_TIME) ? EStatus.AWAITING : EStatus.ABSENT);
-                    }
-                    // Default: Any other past day with no activity is ABSENT
-                    return createStatusResponse(userResponse, date, EStatus.ABSENT);
-                })
-                .sorted(Comparator.comparing(AttendanceRecordResponseDTO::getDate))
-                .collect(Collectors.toList());
+        List<AttendanceRecordResponseDTO> historicalRecords = new ArrayList<>();
+
+        startDate.datesUntil(endDate.plusDays(1)).forEach(date -> {
+            AttendanceRecordResponseDTO dailyRecord;
+            DayOfWeek dayOfWeek = date.getDayOfWeek();
+
+            if (dayOfWeek == DayOfWeek.SATURDAY || dayOfWeek == DayOfWeek.SUNDAY) {
+                dailyRecord = createStatusResponse(userResponse, date, EStatus.WEEKEND, Set.of());
+            } else if (leaveDays.contains(date)) {
+                dailyRecord = createStatusResponse(userResponse, date, EStatus.ON_LEAVE, Set.of());
+            } else if (transactionsByDate.containsKey(date)) {
+                dailyRecord = buildRecordFromTransactions(userResponse, date, transactionsByDate.get(date), historicalRecords);
+            } else {
+                Set<String> issues = new HashSet<>();
+                if(date.isBefore(endDate)){
+                    issues.add("No punch recorded");
+                }
+                EStatus status = (date.equals(endDate) && LocalTime.now(systemZoneId).isBefore(WORK_END_TIME)) ? EStatus.AWAITING : EStatus.ABSENT;
+                dailyRecord = createStatusResponse(userResponse, date, status, issues);
+            }
+            historicalRecords.add(dailyRecord);
+        });
+
+        return historicalRecords;
+    }
+
+    @Override
+    public AttendanceRecordResponseDTO getAttendanceRecordByEmployeeIdAndDate(String employeeId, LocalDate date) {
+        UserResponse userResponse = getUserByEmployeeId(employeeId);
+        List<AttendanceTransaction> transactions = attendanceTransactionRepository.findByEmployeeEmailAndPunchDate(
+                userResponse.email(), date.atStartOfDay(systemZoneId).toInstant(), date.plusDays(1).atStartOfDay(systemZoneId).toInstant());
+
+        if (transactions.isEmpty()) {
+            Set<String> issues = new HashSet<>();
+            // Only flag "No punch recorded" for past dates on single-day fetches.
+            if (date.isBefore(LocalDate.now(systemZoneId))) {
+                issues.add("No punch recorded");
+            }
+            return createStatusResponse(userResponse, date, EStatus.ABSENT, issues);
+        }
+
+        // Pass an empty list for historical records as we are only analyzing a single day.
+        return buildRecordFromTransactions(userResponse, date, transactions, List.of());
     }
 
     @Override
@@ -110,7 +117,7 @@ public class AttendanceTransactionServiceImpl implements AttendanceTransactionSe
         try {
             date = LocalDate.parse(dateString);
         } catch (DateTimeParseException e) {
-            throw new AttendanceException("Invalid date format. Please use yyyy-MM-dd.", e);
+            throw new AttendanceException("Invalid date format. Please use YYYY-MM-DD.", e);
         }
 
         List<UserResponse> allUsers = userClient.getAllUsers();
@@ -119,7 +126,7 @@ public class AttendanceTransactionServiceImpl implements AttendanceTransactionSe
         }
 
         return allUsers.stream()
-                .map(user -> buildRecordForSingleDay(user, date))
+                .map(user -> getAttendanceRecordByEmployeeIdAndDate(user.id(), date))
                 .collect(Collectors.toList());
     }
 
@@ -137,68 +144,91 @@ public class AttendanceTransactionServiceImpl implements AttendanceTransactionSe
                 System.err.println("Could not process records for employee ID " + user.id() + ": " + e.getMessage());
             }
         }
-        allRecords.sort(Comparator.comparing(AttendanceRecordResponseDTO::getDate));
+        allRecords.sort(Comparator.comparing(AttendanceRecordResponseDTO::date));
         return allRecords;
     }
 
-    // ===================================================================================
-    // HELPER METHODS
-    // ===================================================================================
+    // Private Helper Methods
 
-    /**
-     * Builds a record for a single day, fetching its own data.
-     * Used by getAttendanceRecordByEmployeeIdAndDate.
-     */
-    private AttendanceRecordResponseDTO buildRecordForSingleDay(UserResponse userResponse, LocalDate date) {
-        DayOfWeek dayOfWeek = date.getDayOfWeek();
-        if (dayOfWeek == DayOfWeek.SATURDAY || dayOfWeek == DayOfWeek.SUNDAY) {
-            return createStatusResponse(userResponse, date, EStatus.WEEKEND);
-        }
-        if (isLeaveOnDate(userResponse.id(), date)) {
-            return createStatusResponse(userResponse, date, EStatus.ON_LEAVE);
-        }
-        Instant startOfDay = date.atStartOfDay(systemZoneId).toInstant();
-        Instant endOfDay = date.plusDays(1).atStartOfDay(systemZoneId).toInstant();
-        List<AttendanceTransaction> transactions = attendanceTransactionRepository.findByEmployeeEmailAndPunchDate(
-                userResponse.email(), startOfDay, endOfDay);
-
-        if(transactions.isEmpty()) {
-            if (date.equals(LocalDate.now(systemZoneId))) {
-                return createStatusResponse(userResponse, date,
-                        LocalTime.now(systemZoneId).isBefore(WORK_END_TIME) ? EStatus.AWAITING : EStatus.ABSENT);
-            }
-            return createStatusResponse(userResponse, date, EStatus.ABSENT);
-        }
-        return buildRecordFromTransactions(userResponse, date, transactions);
-    }
-
-    /**
-     * Private helper to build a DTO from pre-fetched transactions.
-     * This avoids redundant DB calls and is used by the main gap-filling logic.
-     */
-    private AttendanceRecordResponseDTO buildRecordFromTransactions(UserResponse user, LocalDate date, List<AttendanceTransaction> transactions) {
+    private AttendanceRecordResponseDTO buildRecordFromTransactions(UserResponse user, LocalDate date, List<AttendanceTransaction> transactions, List<AttendanceRecordResponseDTO> historicalRecords) {
         transactions.sort(Comparator.comparing(AttendanceTransaction::getPunchTime));
-
         List<LocalTime> punchTimes = transactions.stream()
-                .map(transaction -> transaction.getPunchTime().atZone(systemZoneId).toLocalTime())
+                .map(t -> t.getPunchTime().atZone(systemZoneId).toLocalTime())
                 .collect(Collectors.toList());
 
-        LocalTime firstPunch = punchTimes.getFirst();
-        LocalTime lastPunch = punchTimes.getLast();
+        LocalTime firstPunch = punchTimes.get(0);
+        LocalTime lastPunch = punchTimes.get(punchTimes.size() - 1);
         Duration totalWorkDuration = calculateTotalWorkDuration(punchTimes);
-        String totalHoursFormatted = formatDuration(totalWorkDuration);
+        EStatus status = determineStatus(totalWorkDuration, firstPunch);
 
-        EStatus status;
-        if (totalWorkDuration.toHours() < HALF_DAY_THRESHOLD_HOURS || firstPunch.isAfter(BREAK_START_TIME)) {
-            status = EStatus.HALF_DAY;
-        } else if (firstPunch.isAfter(WORK_START_TIME)) {
-            status = EStatus.LATE;
-        } else {
-            status = EStatus.PRESENT;
+        Set<String> issues = detectAttendanceIssues(
+                firstPunch, lastPunch, punchTimes, totalWorkDuration, status, historicalRecords
+        );
+
+        return new AttendanceRecordResponseDTO(
+                user.id(), user.firstName() + " " + user.lastName(), user.department(), date, status,
+                firstPunch, lastPunch, formatDuration(totalWorkDuration), punchTimes, punchTimes.size(), issues
+        );
+    }
+
+    private Set<String> detectAttendanceIssues(LocalTime firstPunch, LocalTime lastPunch, List<LocalTime> punchTimes, Duration totalWork, EStatus status, List<AttendanceRecordResponseDTO> historicalRecords) {
+        Set<String> issues = new HashSet<>();
+
+        if (firstPunch.isAfter(WORK_START_TIME.plus(LATE_ARRIVAL_THRESHOLD))) {
+            issues.add("Arrived very late");
         }
 
-        return new AttendanceRecordResponseDTO(user.id(), user.firstName() + " " + user.lastName(),
-                user.department(), date, status, firstPunch, lastPunch, totalHoursFormatted, punchTimes, transactions.size());
+        if (punchTimes.size() > 1 && lastPunch.isBefore(WORK_END_TIME.minus(EARLY_LEAVE_THRESHOLD))) {
+            issues.add("Left very early");
+        }
+
+        if (punchTimes.size() % 2 != 0) {
+            issues.add("Missed last punch");
+        }
+
+        if (status != EStatus.HALF_DAY && totalWork.compareTo(MINIMUM_REQUIRED_WORK_DURATION) < 0) {
+            issues.add("Worked fewer hours than required");
+        }
+
+        Duration actualBreak = calculateActualBreakDuration(punchTimes);
+        if (actualBreak.compareTo(UNUSUAL_BREAK_THRESHOLD) > 0) {
+            issues.add("Unusually long break");
+        }
+
+        if (status == EStatus.LATE || issues.contains("Arrived very late")) {
+            long recentLatenessCount = historicalRecords.stream()
+                    .filter(r -> r.date().isAfter(LocalDate.now(systemZoneId).minusDays(TARDINESS_LOOKBACK_DAYS)))
+                    .filter(r -> r.status() == EStatus.LATE || r.issues().contains("Arrived very late"))
+                    .count();
+
+            if (recentLatenessCount + 1 >= TARDINESS_FREQUENCY_THRESHOLD) {
+                issues.add("Frequent tardiness");
+            }
+        }
+
+        return issues;
+    }
+
+    private EStatus determineStatus(Duration totalWorkDuration, LocalTime firstPunch) {
+        if (totalWorkDuration.toHours() < 4 || firstPunch.isAfter(BREAK_START_TIME)) {
+            return EStatus.HALF_DAY;
+        } else if (firstPunch.isAfter(WORK_START_TIME)) {
+            return EStatus.LATE;
+        } else {
+            return EStatus.PRESENT;
+        }
+    }
+
+    private Duration calculateActualBreakDuration(List<LocalTime> punchTimes) {
+        if (punchTimes.size() <= 2) return Duration.ZERO;
+
+        Duration totalBreak = Duration.ZERO;
+        for (int i = 1; i < punchTimes.size() - 1; i += 2) {
+            LocalTime breakStart = punchTimes.get(i);
+            LocalTime breakEnd = punchTimes.get(i + 1);
+            totalBreak = totalBreak.plus(Duration.between(breakStart, breakEnd));
+        }
+        return totalBreak;
     }
 
     private Duration calculateTotalWorkDuration(List<LocalTime> punchTimes) {
@@ -226,14 +256,7 @@ public class AttendanceTransactionServiceImpl implements AttendanceTransactionSe
         return String.format("%d:%02d", hours, minutes);
     }
 
-    /**
-     * Placeholder for an efficient bulk leave-checking operation.
-     * Ideally, your LeaveClient should have a method that takes a date range.
-     */
     private Set<LocalDate> getLeaveDatesForPeriod(String userId, LocalDate start, LocalDate end) {
-        // This is where you would call your leave microservice.
-        // For example: return leaveClient.getLeavesForEmployeeBetween(userId, start, end).getBody();
-        // Simulating by checking each day individually (the less performant way).
         return start.datesUntil(end.plusDays(1))
                 .filter(date -> isLeaveOnDate(userId, date))
                 .collect(Collectors.toSet());
@@ -248,8 +271,10 @@ public class AttendanceTransactionServiceImpl implements AttendanceTransactionSe
         return userClient.getUserByDn(employeeId);
     }
 
-    private AttendanceRecordResponseDTO createStatusResponse(UserResponse user, LocalDate date, EStatus status) {
-        return new AttendanceRecordResponseDTO(user.id(), user.firstName() + " " + user.lastName(),
-                user.department(), date, status, null, null, "0:00", List.of(), 0);
+    private AttendanceRecordResponseDTO createStatusResponse(UserResponse user, LocalDate date, EStatus status, Set<String> issues) {
+        return new AttendanceRecordResponseDTO(
+                user.id(), user.firstName() + " " + user.lastName(), user.department(), date, status,
+                null, null, "0:00", List.of(), 0, issues
+        );
     }
 }
